wwwroot/css/styles.css
/* CSS styles for your layout */
/*.customcontainer {
 
    width: 80vw;
    height: 100vh;
    left: 0;

}*/

/*vh;*/

/*.top-bar {
    height: 10%;
    background-color: #333;
    color: white;
}*/

.customcontainer{
    max-width: 1320px;
    min-width: 1320px;
}

.limitFeilds-content {
    min-width: 450px;
    max-width: 450px;
}

textarea {
    width: 100%;
    height: 100%;
    border-width: 1px;
    resize: none;
    background-color: #DFCCFB;
    font-weight: 500;
}

/*.left-section {
    display: flex;
    height: 90%;
    left :10%;
}*/


.leftmenu,
.rightmenu {
    width: 250px;
/*    height: 70%;*/
    padding: 1rem;
}



.leftmenu {
    background-color: #f8f9fa;
}
.leftmenu h2{
    text-align: center;
    margin-bottom: 10px;
    font-size: 28px;
}

.leftmenu a {
    padding: 5px;
    text-decoration: none;
    color: #333;
}

.rightmenu {
    background-color: #eee;
    text-align: center;
}
/*.rightmenu .rightmenu-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}*/
.rightmenu h2 {
    font-size: 28px;
}

.rightmenu img {
    width: 160px;
    height: auto;
    margin: 0 auto 6px;
}

.rightmenu img:last-child {
    margin-bottom: 0;
}

.rightmenu a {
    display: block;
    padding: 5px;
    text-decoration: none;
    color: #333;
}


.workspace {
    flex: 1 1 auto;
    /*    width: 60%;*/
    /*    height: 70%;*/
    height: 480px;
    /*    background-color: #f9f9f9;*/
    padding: 10px;
    border-width: 1px;
    position: relative;
    align-items: flex-end;
    display: flex;
    justify-content: center;
}

.hidden-state {
    display: none;
}

.visible-state {
    display: block;
}

.step {
/*    background-color: #A0E9FF;
    border: 1px solid #dee2e6;*/
/*    padding: 20px;*/
    margin-bottom: 20px;
/*    border-radius: 5px;*/
}

.step1 {
/*    background-color: #eee;
    border: 1px solid #dee2e6;
    padding: 20px;*/
    margin-bottom: 20px;
    border-radius: 5px;
}

h2 {
    color: #DA0C81;
}

.presentItem {
    font-weight:bolder;
}

/*.NormalItem {
    background: #A0E9FF;
    font-weight: 100;
}*/

.workarea_itemsGroup {
    display: flex;
    align-items: flex-end;
    justify-content: center;
    width: 100%;
}
.workarea_itemsGroup img {
    height: fit-content;
    width: 160px;
    margin: 0 10px;
}
.workarea_item {
/*    width: 160px;
    margin: 0 10px;*/
}
.workarea_item_jar{
    position: relative;
}
.workarea_item_jar img {
    width: 140px;
}
.workarea_item_jar .jar-watercan {
    position: absolute;
    top: -10px;
    left: 64px;
}

.workarea_item_jar .imageshake {
    position: absolute;
    top: -40px;
    left: 0;
}


.inner-div-center-first {
    position: absolute; /* Position the inner div absolutely */
    bottom: 0; /* Align the bottom of the inner div with the bottom of the outer div */
    width: 10%;
    left: 10%;
}

.inner-div-center {
    position: absolute; /* Position the inner div absolutely */
    bottom: 0; /* Align the bottom of the inner div with the bottom of the outer div */
    width: 10%;
    left: 30%;
}

.inner-div-center-right {
    position: absolute; /* Position the inner div absolutely */
    bottom: 0; /* Align the bottom of the inner div with the bottom of the outer div */
    width: 10%;
    left: 50%;
}


.inner-div-center-right-end {
    position: absolute; /* Position the inner div absolutely */
    bottom: 0; /* Align the bottom of the inner div with the bottom of the outer div */
    width: 10%;
    left: 70%;
}

.inner-div-center-last {
    position: absolute; /* Position the inner div absolutely */
    bottom: 0; /* Align the bottom of the inner div with the bottom of the outer div */
    width: 10%;
    left: 85%;
}

.inner-div-center-mid {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 33%;
    top:25%;
}

.inner-div-center-mid-left-1 {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 0%;
    bottom: 0;
}

.inner-div-center-mid-left-2 {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 20%;
    bottom: 0;
}


.inner-div-center-mid-left-3 {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 20%;
    bottom: 0;
}


.inner-div-center-mid-left-4 {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 43%;
    bottom: 0;
}
.inner-div-center-mid-top {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 22%;
    top: 22%;
}

.inner-div-center-mid-right {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 56%;
    top: 25%;
}

.inner-div-center-mid-right-top {
    position: absolute; /* Position the inner div absolutely */
    width: 10%;
    left: 44%;
    top: 22%;
}

.imageshake {
    /*Start the shake animation and make the animation last for 0.5 seconds*/
    animation: shake 0.5s;
    /*When the animation is finished, start again*/
    animation-iteration-count: 1000;
    /*animation-duration : 8s*/
}

@keyframes shake {
    0% {
        transform: translate(1px, 1px) rotate(0deg);
    }

    10% {
        transform: translate(-1px, -2px) rotate(-1deg);
    }

    20% {
        transform: translate(-3px, 0px) rotate(1deg);
    }

    30% {
        transform: translate(3px, 2px) rotate(0deg);
    }

    40% {
        transform: translate(1px, -1px) rotate(1deg);
    }

    50% {
        transform: translate(-1px, 2px) rotate(-1deg);
    }

    60% {
        transform: translate(-3px, 1px) rotate(0deg);
    }

    70% {
        transform: translate(3px, 1px) rotate(-1deg);
    }

    80% {
        transform: translate(-1px, -1px) rotate(1deg);
    }

    90% {
        transform: translate(1px, 2px) rotate(0deg);
    }

    100% {
        transform: translate(1px, -2px) rotate(-1deg);
    }
}
/* ... */

